--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Page Demo</title>
-    <link rel="stylesheet" href="myapp/src/main/resources/static/login/login.html">
+    <link rel="stylesheet" href="myapp/src/main/resources/static/common/style.css">
 </head>
 <body>
-    <button onclick="location.href='login/login.html'">Move To Demo Page.</button>
+    <button onclick="location.href='myapp/src/main/resources/static/login/login.html'">Move To Demo Page.</button>
 </body>
 </html>
