--- a/myapp/src/main/resources/static/login/login_new.html
+++ b/myapp/src/main/resources/static/login/login_new.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>SPOT ON AIR - 로그인</title>
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="login_new.css" />
 </head>
 <body>
   <div class="login-container">
     <div class="login-left">
       <div class="logo-placeholder">
-        방송부 로고나 대표 사진 등
+        덤벙빡단비
       </div>
     </div>
     <div class="login-right">
@@ -17,14 +17,18 @@
         <span class="spot-title">SPOT ON AIR</span>
         <h1>Login</h1>
       </div>
-      <form class="login-form">
+      <form class="login-form" id="loginForm">
         <div class="input-group">
-          <span class="icon"><svg width="24" height="24" fill="#888"><path d="M12 12c2.67 0 8 1.34 8 4v2H4v-2c0-2.66 5.33-4 8-4zm0-2a4 4 0 100-8 4 4 0 000 8z"/></svg></span>
-          <input type="text" placeholder="아이디" />
+          <span class="icon">
+            <svg width="24" height="24" fill="#888"><path d="M12 12c2.67 0 8 1.34 8 4v2H4v-2c0-2.66 5.33-4 8-4zm0-2a4 4 0 100-8 4 4 0 000 8z"/></svg>
+          </span>
+          <input type="text" id="username" placeholder="아이디" />
         </div>
         <div class="input-group">
-          <span class="icon"><svg width="24" height="24" fill="#888"><path d="M12 17a2 2 0 002-2v-3a2 2 0 00-4 0v3a2 2 0 002 2zm6-7V8a6 6 0 10-12 0v2a2 2 0 00-2 2v7a2 2 0 002 2h12a2 2 0 002-2v-7a2 2 0 00-2-2zm-8-2a4 4 0 118 0v2H6V8zm10 11H6v-7h12v7z"/></svg></span>
-          <input type="password" placeholder="비밀번호" />
+          <span class="icon">
+            <svg width="24" height="24" fill="#888"><path d="M12 17a2 2 0 002-2v-3a2 2 0 00-4 0v3a2 2 0 002 2zm6-7V8a6 6 0 10-12 0v2a2 2 0 00-2 2v7a2 2 0 002 2h12a2 2 0 002-2v-7a2 2 0 00-2-2zm-8-2a4 4 0 118 0v2H6V8zm10 11H6v-7h12v7z"/></svg>
+          </span>
+          <input type="password" id="password" placeholder="비밀번호" />
         </div>
         <div class="button-group">
           <button type="submit" class="sign-in">Sign in</button>
@@ -33,5 +37,6 @@
       </form>
     </div>
   </div>
+  <script src="login.js"></script>
 </body>
 </html>
