--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="login-container">
     <div class="login-left">
       <div class="logo-placeholder">
-        방송부 로고나 대표 사진 등
+        덤벙빡단비
       </div>
     </div>
     <div class="login-right">
@@ -37,6 +37,6 @@
       </form>
     </div>
   </div>
-  <script src="login.js"></script>
+  <script src="./src/javascript/login.js"></script>
 </body>
 </html>
