--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="button-group">
           <button type="submit" class="sign-in">Sign in</button>
-          <button type="button" class="create-account">Create account</button>
+          <button type="button" class="create-account"><a></a>Create account</button>
         </div>
       </form>
     </div>
