--- a/main.html
+++ b/main.html
@@ -89,15 +89,15 @@
           </div>
           <ol>
             <li>
-              <span class="song-thumb"><img src="./public/너에게 닿기를.png"></span>
+              <span class="song-thumb"><img src="public/너에게 닿기를.png"></span>
               <span class="song-info">Danbe<br><small>덤벙비</small></span>
             </li>
             <li>
-              <span class="song-thumb"><img src="./public/너에게 닿기를.png"></span>
+              <span class="song-thumb"><img src="public/너에게 닿기를.png"></span>
               <span class="song-info">Danbe<br><small>쿨단비</small></span>
             </li>
             <li>
-              <span class="song-thumb"><img src="./public/너에게 닿기를.png"></span>
+              <span class="song-thumb"><img src="public/너에게 닿기를.png"></span>
               <span class="song-info">Danbe<br><small>착한비</small></span>
             </li>
           </ol>
@@ -118,11 +118,11 @@
         <div class="card-title">내가 신청한 곡 <span class="cnt">(2건)</span></div>
         <ul>
           <li>
-            <div class="song-thumb"><img src="./public/너에게 닿기를.png"></div>
+            <div class="song-thumb"><img src="public/너에게 닿기를.png"></div>
             <div class="song-info">너에게 닿기를<br><small>10cm</small></div>
           </li>
           <li>
-            <div class="song-thumb"><img src="./public/너에게 닿기를.png"></div>
+            <div class="song-thumb"><img src="public/너에게 닿기를.png"></div>
             <div class="song-info">이게 아닌데~<br><small>승아</small></div>
           </li>
         </ul>
