--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>SPOT ON AIR - 로그인</title>
-  <link rel="stylesheet" href="./src/styles/login.css" />
+  <link rel="stylesheet" href="src/styles/login.css" />
 </head>
 <body>
   <div class="login-container">
@@ -37,6 +37,6 @@
       </form>
     </div>
   </div>
-  <script src="./src/javascript/login.js"></script>
+  <script src="src/javascript/login.js"></script>
 </body>
 </html>
