--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>SPOT AIR</title>
-  <link rel="stylesheet" href="./src/styles/main.css">
+  <link rel="stylesheet" href="src/styles/main.css">
 </head>
 <body>
   <header class="header">
     <div class="logo">
-      <img src="./public/logo.png"/>
+      <img src="public/logo.png"/>
       <span>Development version</span>
     </div>
     <div class="exam-info">
