--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
       </div>
       <form class="login-form" id="loginForm">
         <div class="input-group">
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <svg width="24" height="24" fill="#888"><path d="M12 12c2.67 0 8 1.34 8 4v2H4v-2c0-2.66 5.33-4 8-4zm0-2a4 4 0 100-8 4 4 0 000 8z"/></svg>
           </span>
-          <input type="text" id="username" placeholder="아이디" />
+          <input type="text" id="username" placeholder="아이디" aria-label="아이디 입력" required />
         </div>
         <div class="input-group">
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <svg width="24" height="24" fill="#888"><path d="M12 17a2 2 0 002-2v-3a2 2 0 00-4 0v3a2 2 0 002 2zm6-7V8a6 6 0 10-12 0v2a2 2 0 00-2 2v7a2 2 0 002 2h12a2 2 0 002-2v-7a2 2 0 00-2-2zm-8-2a4 4 0 118 0v2H6V8zm10 11H6v-7h12v7z"/></svg>
           </span>
-          <input type="password" id="password" placeholder="비밀번호" />
+          <input type="password" id="password" placeholder="비밀번호" aria-label="비밀번호 입력" required />
         </div>
         <div class="button-group">
           <button type="submit" class="sign-in">Sign in</button>
-          <button type="button" class="create-account"><a></a>Create account</button>
+          <button type="button" class="create-account">Create account</button>
         </div>
       </form>
     </div>
